# parallel-and-concurrent-haskell

./: .hgignore  .travis.yml  par-con-haskell.cabal
src/: Utils.hs
src/Concurrent/Chapter7/: Section1.hs  Section2.hs  Section3.hs
src/Concurrent/Chapter8/: Section1.hs  Section2.hs  Section3.hs  Section4.hs
src/Concurrent/Chapter9/: Section1.hs  Section2.hs  Section3.hs  Section4.hs  Section5.hs
