name:                par-con-haskell
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple

executable par-con-haskell-exe
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , par-con-haskell 

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base
                     , containers
  exposed-modules:     Utils
                     , Concurrent.Chapter7.Section1
                     , Concurrent.Chapter7.Section2
                     , Concurrent.Chapter7.Section3
                     , Concurrent.Chapter8.Section1
                     , Concurrent.Chapter8.Section2
                     , Concurrent.Chapter8.Section3
                     , Concurrent.Chapter8.Section4
                     , Concurrent.Chapter9.Section1
                     , Concurrent.Chapter9.Section2
                     , Concurrent.Chapter9.Section3
                     , Concurrent.Chapter9.Section4
                     , Concurrent.Chapter9.Section5